@@ -3,7 +3,7 @@
 SNP_REANNOTATOR="../../../tools/snp_reannotator --loglevel DEBUG"
 
 if [ "$1" == "--clean" ]; then
-    rm -fv *.log *marker_definitions.tsv *.fastq marker_alignment.tsv
+    rm -fv *.log *marker_definitions.tsv *.fastq marker_alignment.tsv segment_extractor.tsv
     exit 0
 fi
 
@@ -20,4 +20,5 @@ echo "Testing markers_to_fastq"
 ${SNP_REANNOTATOR} --logfile markers_to_fastq.log markers_to_fastq -i markerDefinitionsTest.tsv -o reads.fastq
 
 echo "Testing convert_sam"
-${SNP_REANNOTATOR} --logfile convert_sam.log convert_sam -i reads.sam -o marker_alignment.tsv --reftag hg18
+${SNP_REANNOTATOR} --logfile convert_sam_to_ma.log convert_sam -i reads.sam -o marker_alignment.tsv --reftag hg18
+${SNP_REANNOTATOR} --logfile convert_sam_to_se.log convert_sam -i reads.sam -o segment_extractor.tsv --reftag hg18 --output-format segment_extractor
