@@ -1,3 +1,8 @@
+2011-09-20    <simleo@neuron.crs4.it>
+
+	* bl/vl/app/snp_reannotator/convert_sam.py: added an output format
+	for Galaxy's genome segment extractor.
+
 2011-09-19    <simleo@neuron.crs4.it>
 
 	* bl/vl/app/snp_reannotator/convert_sam.py (SnpHitProcessor):
